--- a/codeBase.css
+++ b/codeBase.css
@@ -7,10 +7,11 @@
 }
 body {
   background-color: black;
-  width: 100%;
-  height:90vh;
+  width: 100vw;
+  height: auto;
   padding: 30px;
   border: 5px double gray;
+  border: solid 1px red;
 }
 
 /*****************************************/
