--- a/repere.css
+++ b/repere.css
@@ -1,45 +1,47 @@
 body {
   background-color: black;
-  /* width: 100vw; */
-  height: auto;
-  border: 5px double gray;
 }
+h4,
 h3,
 h2,
 h1 {
   background-color: transparent;
- 
+  font-size: 300%;
 }
-h1{
+h1 {
   color: green;
 }
-h2{
+h2 {
   color: blue;
 }
-h3{
+h3 {
   color: red;
+}
+h4 {
+  color: purple;
 }
 span {
   width: 200px;
   position: absolute;
   top: 1%;
-  
-  translate:-50% 0%;
+
+  translate: -50% 0%;
   color: white;
   font-size: 2rem;
   text-align: center;
   border: solid 1px white;
+  z-index: 20;
 }
 .s0 {
-  left: 300px;
-  color: white;
-}
-.s1 {
   left: 100px;
   color: red;
 }
+.s1 {
+  left: 300px;
+  color: red;
+}
 .s2 {
-  left: 200px;
+  left: 600px;
   color: blue;
 }
 .s3 {
@@ -61,7 +63,7 @@ span {
   left: 1900px;
   color: green;
   top: 10%;
-} 
+}
 .s7 {
   left: 1400px;
   color: pink;
@@ -74,9 +76,6 @@ span {
   left: 1700px;
   color: red;
 }
-
-
-
 
 :root {
   --yPosition1: 0%;
@@ -107,7 +106,10 @@ span {
 #pts-css8,
 #pts-css9,
 #pts-css10,
-#pts-css11 {
+#pts-css11 ,
+#pts-css12 ,
+#pts-css13 ,
+#pts-css14 {
   position: absolute;
   top: var(--yPosition1);
   left: var(--XPosition);
@@ -159,7 +161,8 @@ span {
 #pts-css6 {
   width: 768px;
   height: 1024px;
-  border: solid 10px blue;
+  height: 980px;
+  border: solid 5px blue;
   z-index: var(--zindex-repere);
 }
 
@@ -167,232 +170,58 @@ span {
 #pts-css7 {
   width: 820px;
   height: 1180px;
-  border: solid 10px blue;
+  border: solid 5px blue;
   z-index: var(--zindex-repere);
 }
-
 
 /* petit ecran */
 #pts-css8 {
   width: 992px;
   height: 600px;
-  border: solid 12px green;
+  border: solid 5px green;
   z-index: var(--zindex-repere);
 }
 /* ecran standar */
 #pts-css9 {
   width: 1200px;
   height: 1080px;
-  border: solid 12px green;
+  border: solid 5px green;
   z-index: var(--zindex-repere);
 }
 #pts-css10 {
   width: 1440px;
   height: 900px;
-  border: solid 12px green;
+  border: solid 5px green;
   z-index: var(--zindex-repere);
 }
 /* hdmi */
 #pts-css11 {
   width: 1920px;
   height: 1080px;
-  border: solid 20px green;
+  border: solid 5px green;
   z-index: var(--zindex-repere);
 }
+
+#pts-css12 {
+  width: 1900px;
+  height: 1000px;
+  border: solid 10px purple;
+  z-index: var(--zindex-repere);
+}
+#pts-css13 {
+  width: 1860px;
+  height: 900px;
+  border: solid 10px purple;
+  z-index: var(--zindex-repere);
+}
+#pts-css14 {
+  width: 380px;
+  height: 490px;
+  border: solid 10px purple;
+  z-index: var(--zindex-repere);
+}
+
+
+
 /* #endregion */
 
-/* #region repere break points */
-
-#mobileP {
-  position: absolute;
-  top: 150%;
-  left: 10px;
-  z-index: var(--zindex-repere);
-  width: 320px;
-  height: 568px;
-  border: solid 2px red;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#Mp {
-  font-size: 40px;
-  writing-mode: horizontal-tb;
-  text-align: center;
-  margin: auto;
-  border: solid 1px wheat;
-}
-#mobileP:hover {
-  transform: rotate(90deg);
-}
-#mobileP:hover #Mp {
-  transform: rotate(-90deg);
-}
-
-#mobileS {
-  position: absolute;
-  top: 150%;
-  left: 400px;
-  z-index: var(--zindex-repere);
-  width: 375px;
-  height: 667px;
-  border: solid 2px green;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#Ms {
-  font-size: 40px;
-  writing-mode: horizontal-tb;
-  text-align: center;
-  margin: auto;
-  border: solid 1px wheat;
-}
-#mobileS:hover {
-  transform: rotate(90deg);
-}
-#mobileS:hover #Ms {
-  transform: rotate(-90deg);
-}
-
-#mobileG {
-  position: absolute;
-  top: 150%;
-  left: 900px;
-  z-index: var(--zindex-repere);
-  width: 414px;
-  height: 736px;
-  border: solid 2px orange;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#Mg {
-  font-size: 40px;
-  writing-mode: horizontal-tb;
-  text-align: center;
-  margin: auto;
-  border: solid 1px wheat;
-}
-#mobileG:hover {
-  transform: rotate(90deg);
-}
-#mobileG:hover #Mg {
-  transform: rotate(-90deg);
-}
-
-#tabletteS {
-  position: absolute;
-  top: 150%;
-  left: 1400px;
-  z-index: var(--zindex-repere);
-  width: 768px;
-  height: 1024px;
-  border: solid 2px blue;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#Ts {
-  font-size: 80px;
-  writing-mode: horizontal-tb;
-  text-align: center;
-  margin: auto;
-  border: solid 1px wheat;
-}
-#tabletteS:hover {
-  transform: rotate(90deg);
-}
-#tabletteS:hover #Ts {
-  transform: rotate(-90deg);
-}
-
-#tabletteG {
-  position: absolute;
-  top: 150%;
-  left: 2300px;
-  z-index: var(--zindex-repere);
-  width: 1024px;
-  height: 1366px;
-  border: solid 2px purple;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#Tg {
-  font-size: 80px;
-  writing-mode: horizontal-tb;
-  text-align: center;
-  margin: auto;
-  border: solid 1px wheat;
-}
-#tabletteG:hover {
-  transform: rotate(90deg);
-}
-#tabletteG:hover #Tg {
-  transform: rotate(-90deg);
-}
-
-#ecranP {
-  position: absolute;
-  top: 150%;
-  left: 3500px;
-  z-index: var(--zindex-repere);
-  width: 1366px;
-  height: 768px;
-  border: solid 2px yellow;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#Ep {
-  font-size: 100px;
-  writing-mode: horizontal-tb;
-  text-align: center;
-  margin: auto;
-  border: solid 1px wheat;
-}
-#ecranP:hover {
-  transform: rotate(90deg);
-}
-#ecranP:hover #Ep {
-  transform: rotate(-90deg);
-}
-
-#ecranG {
-  position: absolute;
-  top: 150%;
-  left: 5000px;
-  z-index: var(--zindex-repere);
-  width: 1920px;
-  height: 1080px;
-  border: solid 2px cyan;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#Eg {
-  font-size: 100px;
-  writing-mode: horizontal-tb;
-  text-align: center;
-  margin: auto;
-  border: solid 1px wheat;
-}
-#ecranG:hover {
-  transform: rotate(90deg);
-}
-#ecranG:hover #Eg {
-  transform: rotate(-90deg);
-}
-
-/* #endregion repere break points */
-
-#exemp {
-  border: solid 3px yellow;
-  padding: 10px;
-  margin: 10px;
-  position: absolute;
-  top: 10%;
-  left: 100%;
-  width: 50%;
-}
