--- a/codeBase.css
+++ b/codeBase.css
@@ -5,13 +5,13 @@
   padding: 0;
   color: white;
 }
+
+
 body {
   background-color: black;
-  width: 100vw;
   height: auto;
-  padding: 30px;
   border: 5px double gray;
-  border: solid 1px red;
+  width: 1850px;
 }
 
 /*****************************************/
@@ -90,24 +90,21 @@ h5 {
   max-height: 0;
   max-width: 0;
   overflow: hidden; /* Cache ce qui dépasse */
-  transition: max-height 0.1s ease-in-out, max-width 0.1s ease-in-out; /* La clé pour l'effet de slide */
+  transition: max-height 0.3s ease-in-out, max-width 0.6s ease-in-out; /* La clé pour l'effet de slide */
 }
 
 /*************************************************/
 /* Classe ajoutée par JS pour révéler le contenu */
-/*
-.contentV,
-.contentH,
-.content {
-  */
+
 .contentV.active,
 .contentH.active,
 .content.active {
-  max-width: 100%;
-  max-height: 100%; /* Une grande valeur pour s'assurer que tout le contenu est visible */
+  max-width: 95%;
+  max-height: 100%;
+  /* Une grande valeur pour s'assurer que tout le contenu est visible */
   overflow: hidden; /* Cache ce qui dépasse */
   /*  Une grande valeur pour s'assurer que tout le contenu est visible */
-  transition: max-height 0.2s ease-in-out, max-width 0.2s ease-in-out; /* La clé pour l'effet de slide */
+  transition: max-height 0.6s ease-in-out, max-width 0.3s ease-in-out; /* La clé pour l'effet de slide */
 }
 
 .expli-pad {
@@ -123,7 +120,7 @@ h5 {
 
 /* #region autre  */
 hr {
-  border: dashed 1px purple;
+  border: dashed 5px purple;
   margin: 10px 0px;
   width: 100%;
 }
