--- a/codeBase.css
+++ b/codeBase.css
@@ -13,6 +13,18 @@ body {
   width: 1850px;
 }
 
+ol {
+  background-color: darkgray;
+  padding: 5px 15px;
+  margin: 5px 0px;
+  border: solid 2px yellow;
+  width: auto;
+}
+li {
+  width: 120px;
+  margin: 3px 0px;
+}
+
 /*****************************************/
 .header {
   cursor: pointer; /* Indique qu'on peut cliquer */
